# markdown-builder

./: .editorconfig  .gitignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: tests.yml
examples/: basic.rs
examples/custom-element/: Cargo.toml  README.md
examples/custom-element/src/: main.rs
src/: lib.rs  transforms.rs
src/builders/: image.rs  link.rs  list.rs  mod.rs
src/extensions/: github.rs
src/types/: checkbox.rs  checkmark.rs  header.rs  image.rs  link.rs  list.rs  markdown.rs  mod.rs  paragraph.rs
