[package]
name = "markdown-builder"
description = "A library for building markdown documents"
version = "0.0.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Erb3/markdown-builder"
authors = ["Erb3 <49862976+Erb3@users.noreply.github.com>", "Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2021"

[features]
default = ["extension-github"]
extension-github = []

[dependencies]
dyn-clonable = "0.9.0"
tousize = "1.0.0"
