[package]
name = "markdown-builder"
description = "Opinionated Rust crate for programmatically building markdown documents"
version = "1.0.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Erb3/markdown-builder"
homepage = "https://github.com/Erb3/markdown-builder"
documentation = "https://docs.rs/markdown-builder/latest/markdown_builder/"
authors = ["Erb3 <49862976+Erb3@users.noreply.github.com>"]
edition = "2021"
keywords = ["markdown", "builder", "writer", "generator"]
categories = ["template-engine"]

[dependencies]
dyn-clonable = "0.9.0"
tousize = "1.0.0"
